--- a/Telegram_bot/Telegram_bot/Telegram_bot.csproj
+++ b/Telegram_bot/Telegram_bot/Telegram_bot.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     <PackageReference Include="Telegram.Bot.Framework" Version="1.1.4" />
   </ItemGroup>
