--- a/Telegram_bot/Telegram_bot/Telegram_bot.csproj
+++ b/Telegram_bot/Telegram_bot/Telegram_bot.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="NewsAPI" Version="0.6.0" />
+    <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     <PackageReference Include="Telegram.Bot.Framework" Version="1.1.4" />
